# data_mesh_plt

./: .dockerignore  .env_example  .gitattributes  .gitignore  .gitleaks.toml  .gitleaksignore  .pre-commit-config.yaml  ERD.drawio  LICENSE  README.md  docker-compose.yml  dockerfile  entrypoint.sh  execute_routine.ps1  how_to_use.txt  pyproject.toml  skills-lock.json
.claude/skills/provision-infra/: SKILL.md
.github/workflows/: cd.yml  ci.yml  infra.yml  quality.yml  security.yml  seed-admin.yml
backend/: main.py
backend/domain/entities/: contract_stakeholder.py  data_contract.py  data_product.py  domain.py  refresh_token.py  user.py
backend/domain/interfaces/: data_contract_repository.py  data_product_repository.py  domain_repository.py  refresh_token_repository.py  stakeholder_repository.py  user_repository.py
backend/domain/value_objects/: email.py  user_role.py
backend/infra/: __init__.py  config.py  github_client.py  postgres.py
backend/infra/repositories/: data_contract_repository.py  data_product_repository.py  domain_repository.py  refresh_token_repository.py  stakeholder_repository.py  user_repository.py
backend/interface/: dependencies.py  permissions.py  security.py
backend/interface/routers/: __init__.py  auth.py  data_contract.py  data_product.py  domains.py  users.py
backend/interface/schemas/: auth.py  data_contract.py  data_product.py  domain.py  stakeholder.py  user.py
backend/use_cases/: __init__.py
backend/use_cases/auth/: login.py  logout.py  refresh.py
backend/use_cases/data_contract/: create.py  delete.py  get.py  list.py  sync_from_github.py  update.py  yaml_builder.py
backend/use_cases/data_product/: create.py  delete.py  get.py  list.py  update.py
backend/use_cases/domain/: add_member.py  create.py  delete.py  list.py  remove_member.py  update.py  update_member.py
backend/use_cases/stakeholder/: assign.py  remove.py
backend/use_cases/user/: assign_role.py  create.py  delete.py  get.py  list.py  update.py
database/: DDL.sql  MER_mysql_wkb.mwb  atlas.hcl  docker-compose.yaml
database/migrations/: 20260326000001_create_ddl.sql  20260326000002_setup_roles.sql  20260401000001_fix_admin_schema_grants.sql  20260420000001_add_auth.sql  20260426000001_data_contract_structured.sql  20260428000001_add_rbac.sql  20260503000001_domains_metadata.sql  20260516000001_domains_dimension.sql  20260610000001_data_products_repo_url.sql  atlas.sum
database/schema/: catalog.hcl  governance.hcl  iam.hcl  platform.hcl  schema.hcl
docs/security/: auth-security-roadmap.md
docs/superpowers/plans/: 2026-04-05-azure-cd.md  2026-04-20-login-swagger.md  2026-04-22-login-frontpage.md  2026-04-23-responsive.md  2026-04-26-data-contract-structured-form.md  2026-04-28-rbac.md  2026-04-30-github-code-quality-validation.md  2026-05-03-admin-domain-access.md  2026-05-03-domains-feature.md  2026-06-10-per-product-github-repo.md  2026-06-13-github-button-data-products.md  2026-06-22-terraform-azure-databricks.md
docs/superpowers/specs/: 2026-04-05-azure-cd-design.md  2026-04-20-login-swagger-design.md  2026-04-22-login-frontpage-design.md  2026-04-23-responsive-design.md  2026-04-26-data-contract-structured-form-design.md  2026-04-28-rbac-design.md  2026-04-30-github-code-quality-validation-design.md  2026-05-03-admin-domain-access-design.md  2026-05-03-domains-feature-design.md  2026-06-10-per-product-github-repo-design.md  2026-06-13-github-button-data-products-design.md  2026-06-22-terraform-azure-databricks-design.md  2026-06-24-provision-infra-skill-design.md
frontend/: .env.example  .gitignore  eslint.config.js  index.html  package-lock.json  package.json  stryker.config.mjs  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/coverage/: lcov.info
frontend/coverage/lcov-report/: index.html
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: BottomNav.tsx  Layout.tsx  MobileHeader.tsx  PageHeader.test.tsx  PageHeader.tsx  PrivateRoute.tsx  Sidebar.tsx
frontend/src/contexts/: AuthContext.tsx  ThemeContext.tsx
frontend/src/hooks/: useDataContracts.ts  useDataProducts.ts  useDomainMembers.ts  useDomains.ts  useProfile.ts  useUsers.ts
frontend/src/lib/: api.ts  auth.test.ts  auth.ts  domains.test.ts  domains.ts  queryClient.ts
infra/terraform/: .gitignore  README.md  backend.tf  import.sh  main.tf  outputs.tf  providers.tf  terraform.tfvars.example  variables.tf  versions.tf
scripts/: azure-setup.sh  seed_admin.py
src/: __init__.py  main.py
src/domain/: __init__.py  user_persistence.py
src/infra/: config.py  postgres.py
src/interface/: __init__.py  dependencies.py
src/use_cases/: user_interactor.py
tests/: conftest.py  test_main.py
tests/unit/: test_data_contract_entity.py  test_data_contract_schemas.py  test_data_contract_use_cases.py  test_entities.py  test_n1_detection.py
(+137 files in other folders)
