[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "data_mesh_plt"
version = "0.1.0"
description = "Projeto voltado a criar uma plataforma de Data Mesh"
requires-python = ">=3.12"
readme = "README.md"
license = "MIT"
authors = [
    {name = "Gustavo Brandao"}
]
dependencies = [
    "setuptools==80.9.0",
    "wheel==0.46.2",
    "uvicorn[standard]>=0.23.0",
    "fastapi==0.137.2",
    "asyncpg==0.31.0",
    "python-dotenv>=1.2.2",
    "PyJWT>=2.13.0",
    "bcrypt>=5.0.0",
    "pyyaml>=6.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "pre-commit>=3.4.0",
    "pip-tools>=6.15.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
    "pytest-cov>=5.0.0",
    "radon>=6.0.0",
    "mutmut>=2.4.0,<3",
    "bandit>=1.7.0",
    "pip-audit>=2.7.0",
    "filelock>=3.20.3",
    "virtualenv>=20.36.1",
    "pip>=26.1.2",
]

# Security floors for transitive dependencies (CVE remediation). These are not
# direct imports; they pin vulnerable sub-dependencies above their fixed version.
[tool.uv]
constraint-dependencies = [
    "idna>=3.15",
    "starlette>=1.3.1",
]

[tool.hatch.build.targets.wheel]
packages = ["backend"]
exclude = [
    "/.github",
    "/docs",
]

[tool.ruff]
line-length = 88
exclude = ["tests/*"]
fix = true

[tool.ruff.lint]
ignore = [
    "D105",
    "D107",
    "D203",
    "D212",
    "UP006",
    "UP007",
    "D400",
    "D406",
    "D407",
    "PLC1901",
    "UP035",
]
select = [
    "F",
    "W",
    "E",
    "I",
    "UP",
    "C4",
    "FA",
    "ISC",
    "ICN",
    "RET",
    "SIM",
    "TID",
    "TC",
    "PTH",
    "TD",
    "NPY",
    "C90",
    "ASYNC",
]

[tool.ruff.lint.mccabe]
max-complexity = 15

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "n1: marks tests that verify N+1 query patterns are absent",
]

[tool.bandit]
skips = ["B608"]

[tool.mutmut]
paths_to_mutate = "backend/domain/entities/,backend/domain/value_objects/,backend/use_cases/"
runner = "python -m pytest tests/unit/ -x -q --no-header"
